--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^1.14.3",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-element": "^1.0.0",
+    "vue-jest": "^3.0.0",
     "vue-template-compiler": "^2.5.17",
     "vue-test-utils": "^1.0.0-beta.11"
   },
