--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "mock": "nodemon mock/index.js",
-    "test": "jest"
+    "test:e2e": "vue-cli-service test:e2e",
+    "test:unit": "vue-cli-service test:unit",
+    "mock": "nodemon mock/index.js"
   },
   "husky": {
     "hooks": {
@@ -17,42 +18,34 @@
   "dependencies": {
     "element-ui": "^2.4.5",
     "normalize.css": "^8.0.0",
+    "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
-    "@vue/test-utils": "^1.0.0-beta.25",
-    "babel-jest": "^23.6.0",
+    "@cypress/webpack-preprocessor": "^3.0.0",
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.5",
+    "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-plugin-pwa": "^3.0.5",
+    "@vue/cli-plugin-unit-jest": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "@vue/eslint-config-prettier": "^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.0.1",
     "babel-plugin-component": "^1.1.1",
     "body-parser": "^1.18.3",
-    "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "express": "^4.16.3",
     "husky": "^1.1.1",
-    "jest": "^23.6.0",
-    "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
-    "prettier": "^1.14.3",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-element": "^1.0.0",
     "vue-jest": "^3.0.0",
-    "vue-template-compiler": "^2.5.17",
-    "vue-test-utils": "^1.0.0-beta.11"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "vue-template-compiler": "^2.5.17"
+  }
 }
